[project]
name = "langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "langgraph",
    "notebook>=7.4.3",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
langgraph = { workspace = true }
